--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.body {
+  background: url("./imgs/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Open Sans", sans-serif !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  font-family: "Open Sans", sans-serif !important;
+  color: rgb(255, 255, 255) !important;
+  background-color: rgba(228, 228, 228, 0.85);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-brand {
+  font-family: "Open Sans", sans-serif !important;
+  color: #4f689e !important;
+  font-weight: bolder;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-link {
+  color: rgb(79, 104, 158) !important;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-link:active {
+  color: rgba(24, 63, 77, 0.719) !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link:hover {
+  color: rgba(24, 63, 77, 0.719) !important;
+}
+
+.card {
+  background-color: rgba(228, 228, 228, 0.85);
+  color: #183f4d;
+}
+
+.text-responsive {
+  font-size: calc(50% + 0.5vw + 0.5vh);
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: top;
+  align-content: center;
+  min-width: 200px;
+}
+
+.card-img-top {
+  max-height: 200px;
+}
+
+.contactMe {
+  min-width: 200px;
+}
+
+.profilepic img {
+  min-width: 200px;
+  min-height: 200px;
 }
